testForRelease3