@@ -6,33 +6,12 @@
  * User Manual available at https://docs.gradle.org/5.3.1/userguide/java_library_plugin.html
  */
 
-buildscript {
-    dependencies {
-        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.7.0'
-        classpath 'org.openjfx:javafx:11'
-    }
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-}
-
 plugins {
-    id 'eclipse'
-    id 'java'
+
     id 'java-library'
     id 'maven-publish'
-    id 'application'
-    id 'maven'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.12.0'
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
 repositories {
 
     jcenter()
@@ -48,9 +27,6 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
-
-mainClassName = "sample.application.main.Launcher"
-
 publishing {
     publications {
         mavenAar(MavenPublication) {
@@ -63,51 +39,18 @@ publishing {
     }
 }
 
-javafx {
-
-    version = "11"
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
-}
-
-
-sourceSets {
-    main.java.srcDir "src/main/java"
-    main.resources.srcDir "src/main/resources"
-}
-
-
 dependencies {
+
     api 'org.apache.commons:commons-math3:3.6.1'
 
+
+    implementation 'com.google.guava:guava:27.0.1-jre'
+
+
+    testImplementation 'junit:junit:4.12'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
-    //    implementation 'org.openjfx:javafx:11'
-/*    compile group: 'org.openjfx', name: 'javafx', version: '14'
-    compile group: 'io.github.openfeign', name: 'feign-core', version: '11.0'
-    compile group: 'io.github.openfeign', name: 'feign-okhttp', version: '11.0'
-    compile group: 'io.github.openfeign', name: 'feign-jackson', version: '11.0'*/
-    compile 'com.google.guava:guava:28.2-jre'
-}
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'sample.application.main.Launcher'
-        )
-
-    }
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
-        ]
-        println options.compilerArgs
-    }
 
 }
